# parrot

./: .dockerignore  Dockerfile  README.md  parrot.py  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yaml  ci.yml
k8s/: deployment.yaml  service.yaml
parrot/: cli.py  config.py  parrot.py
tests/: test_cli.py  test_server.py
